--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ node_js:
   - "8"
   - "9"
 install:
-  - npm i npminstall && npminstall
+  - npm i
 script:
   - npm run ci
 after_script:
-  - npminstall codecov && codecov
+  - npm i codecov && codecov
 
 jobs:
   include:
