--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ node_js:
   - "8"
   - "9"
 install:
-  - npm i
+  - npm i cnpm && cnpm install
 script:
   - npm run ci
 after_script:
-  - npm i codecov && codecov
+  - cnpm i codecov && codecov
 
 jobs:
   include:
