--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,11 @@
 sudo: false
 language: node_js
 node_js:
-  - "8"
-  - "9"
+  - '8'
+  - '9'
 install:
-  - npm i cnpm && cnpm install
+  - npm i npminstall && npminstall
 script:
   - npm run ci
 after_script:
-  - cnpm i codecov && codecov
-
-jobs:
-  include:
-    - stage: release
-      node_js: lts/*
-      script: skip
-      deploy:
-        provider: script
-        skip_cleanup: true
-        script:
-          - npx semantic-release
+  - npminstall codecov && codecov
