--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tsc": "^1.20150623.0",
     "tslib": "^1.9.3",
     "tslint": "^5.11.0",
-    "typescript": "3.0",
+    "typescript": "3.5.0-rc",
     "webstorm-disable-index": "^1.2.0",
     "semantic-release": "^15.13.19"
   },
