--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.13.0",
     "egg-ts-helper": "^1.13.0",
+    "nock": "^10.0.6",
+    "semantic-release": "^15.13.19",
     "ts-node": "^8.2.0",
     "tsc": "^1.20150623.0",
     "tslib": "^1.9.3",
     "tslint": "^5.11.0",
     "typescript": "3.5.0-rc",
-    "webstorm-disable-index": "^1.2.0",
-    "semantic-release": "^15.13.19"
+    "webstorm-disable-index": "^1.2.0"
   },
   "egg": {
     "typescript": true
